Fix color contrast for wcag
ERM31378

[4.3.x]

(cherry picked from commit bbdae8af7ebc1b6a9cf5e7479677fe58ebd5d2cf)

--- a/resources/ext.bluespice.privacy.styles.less
+++ b/resources/ext.bluespice.privacy.styles.less
@@ -15,7 +15,7 @@
 	.oo-ui-fieldsetLayout-group {
 		label.bs-privacy-subtitle {
 			font-weight: normal;
-			color: grey;
+			color: #6B6B6B;
 			display: block;
 			margin-bottom: 10px;
 		}
